# 1core

./: .gitignore  CHANGELOG.md  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  shell.nix  tsconfig.json
apps/cli/: cli.mjs
apps/note/: cli.mjs  command.mjs  package.json
apps/note/commands/: append.command.mjs  cat.command.mjs  delete.command.mjs  edit.command.mjs  set.command.mjs
apps/note/lib/: app-name.mjs  init.mjs  set-note.mjs
apps/note/src/: cli.mjs
apps/note/src/commands/: append.command.mjs  cat.command.mjs  delete.command.mjs  edit.command.mjs  (+1 more)
apps/pass/: package.json
apps/projects/: package.json
apps/projects/src/: app.css
apps/pulse/: package.json
apps/pulse/src/: app.css  app.tsx
apps/pulse/src-tauri/: Cargo.toml  tauri.conf.json
apps/vault/: cli.mjs  command.mjs  package.json
apps/vault/commands/: add.command.mjs  add.command.test.mjs  delete.command.mjs  get.command.mjs  get.command.test.mjs  update.command.mjs  update.command.test.mjs
apps/vault/lib/: app-name.mjs  content.mjs  content.test.mjs  init.mjs  prompt.mjs
apps/vault/src/: cli.mjs
lib/1core/: content.mjs  content.test.mjs  db.option.mjs  init.mjs  legacy-content.mjs  migrate.mjs  readline.mjs  version.test.mjs
lib/1core/commands/: delete.command.mjs  delete.command.test.mjs  list.command.mjs  list.command.test.mjs  rename.command.mjs  rename.command.test.mjs
lib/luna/: content.mjs  init.mjs  legacy-content.mjs  migrate.mjs  readline.mjs
lib/test/: spawn-command.mjs
scripts/: build-cli-all.mjs
(+37 files in other folders)
